--- a/frontend/src/pages/Home/styles.module.css
+++ b/frontend/src/pages/Home/styles.module.css
@@ -1,3 +1,52 @@
 .container {
-    
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo {
+  position: absolute;
+  top: 31px;
+  left: 42px;
+  width: 73px;
+  height: auto;
+
+  @media (max-width: 576px) {
+    top: 18px;
+    left: 26px;
+  }
+}
+
+.logo img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid red;
+}
+
+form .titleContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 22px;
+}
+
+form .titleContainer h1 {
+  font: var(--font-title-30);
+  color: var(--color-neutral-black);
+}
+
+form .titleContainer .paragraphs {
+  font: var(--font-body-16);
+  color: var(--color-neutral-black);
+}
+
+form .titleContainer .paragraphs span a {
+  font-weight: 600;
+  color: var(--color-primary-main);
 }
