--- a/frontend/src/pages/Login/styles.module.css
+++ b/frontend/src/pages/Login/styles.module.css
@@ -1,8 +1,9 @@
 .container {
+  height: 100vh;
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
 }
 
 .logo {
@@ -25,7 +26,7 @@
 }
 
 form {
-  width: 50%;
+  width: 30%;
   display: flex;
   flex-direction: column;
 }
