style: added focus within style for input

--- a/frontend/src/components/InputField/styles.module.css
+++ b/frontend/src/components/InputField/styles.module.css
@@ -17,6 +17,10 @@
   padding-bottom: 8px;
 }
 
+.inputContainer:focus-within {
+  border-bottom-color: var(--color-primary-dark);
+}
+
 .inputContainer span {
   display: flex;
   align-items: center;
