--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -39,6 +39,9 @@
   --color-neutral-darkgrey: #4d4d4d;
   --color-neutral-white: #fff;
 
+  /* Auxiliares */
+  --color-auxliary-red: #C10C0F;
+
   /* ----- Sombras ----- */
   --shadow-btn: 0 4px 26px rgba(0, 0, 0, 0.25);
 
