feat: created new user page

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -40,7 +40,7 @@
   --color-neutral-white: #fff;
 
   /* Auxiliares */
-  --color-auxliary-red: #C10C0F;
+  --color-auxiliary-red: #C10C0F;
 
   /* ----- Sombras ----- */
   --shadow-btn: 0 4px 26px rgba(0, 0, 0, 0.25);
