--- a/frontend/src/pages/User/styles.module.css
+++ b/frontend/src/pages/User/styles.module.css
@@ -1,9 +1,17 @@
 .container {
-  height: 100vh;
+  max-width: 95vw;
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
+  justify-self: center;
+  gap: 100px;
+
+  @media (max-width: 576px) {
+    max-width: 85vw;
+    flex-direction: column;
+    gap: 40px;
+  }
 }
 
 .logo {
@@ -26,9 +34,15 @@
 }
 
 .userContent {
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 40px;
+  margin-top: 105px;
+
+  @media (max-width: 576px) {
+    width: 100%;
+  }
 }
 
 .userContent .titleContainer {
@@ -40,11 +54,20 @@
 .userContent .titleContainer h1 {
   font: var(--font-title-40);
   color: var(--color-neutral-black);
+
+  @media (max-width: 576px) {
+    font: var(--font-title-30);
+    font-weight: 600;
+  }
 }
 
 .userContent .titleContainer p {
   font: var(--font-body-16);
   color: var(--color-neutral-black);
+
+  @media (max-width: 576px) {
+    font: var(--font-body-15);
+  }
 }
 
 .userContent .informationsContainer {
@@ -68,5 +91,9 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  gap: 12px;
+
+  @media (max-width: 576px) {
+    flex-direction: column;
+  }
 }
