--- a/frontend/src/pages/User/styles.module.css
+++ b/frontend/src/pages/User/styles.module.css
@@ -1,15 +1,15 @@
 .container {
-  max-width: 95vw;
+  min-height: 100vh;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  justify-self: center;
   gap: 100px;
 
   @media (max-width: 576px) {
     max-width: 85vw;
     flex-direction: column;
+    justify-self: center;
     gap: 40px;
   }
 }
@@ -37,6 +37,7 @@
   width: 50%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   gap: 40px;
   margin-top: 105px;
 
