--- a/frontend/src/components/InfoField/styles.module.css
+++ b/frontend/src/components/InfoField/styles.module.css
@@ -53,13 +53,14 @@
   border-bottom-color: var(--color-primary-dark);
 }
 
-.inputContainer span {
+.inputContainer button {
+  cursor: pointer;
   display: flex;
   width: 14px;
   aspect-ratio: 1 / 1;
 }
 
-.inputContainer span * {
+.inputContainer button * {
   width: 100%;
   height: 100%;
   object-fit: cover;
