--- a/frontend/src/components/InfoField/styles.module.css
+++ b/frontend/src/components/InfoField/styles.module.css
@@ -43,6 +43,7 @@
   font: var(--font-body-15);
   color: var(--color-neutral-grey-3);
   z-index: 1000;
+  transition: 0.3s ease-in-out;
 }
 
 .inputContainer.editable input {
@@ -51,6 +52,10 @@
 
 .inputContainer.editable:focus-within {
   border-bottom-color: var(--color-primary-dark);
+}
+
+.inputContainer.editable button * {
+  fill: var(--color-primary-dark);
 }
 
 .inputContainer button {
